// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertTooltip AlertTooltip 1`] = `
<DocumentFragment>
  <div
    aria-label="title1"
    class="MuiBox-root css-0"
    data-mui-internal-clone-element="true"
  />
</DocumentFragment>
`;

exports[`AlertTooltip AlertTooltip open 1`] = `
<DocumentFragment>
  <div
    aria-label="title2"
    class="MuiBox-root css-0"
    data-mui-internal-clone-element="true"
  />
</DocumentFragment>
`;

exports[`AlertTooltip AlertTooltip open dark 1`] = `
<DocumentFragment>
  <div
    aria-label="title3"
    class="MuiBox-root css-0"
    data-mui-internal-clone-element="true"
  />
</DocumentFragment>
`;
